--- a/.github/workflows/notepad4.yml
+++ b/.github/workflows/notepad4.yml
@@ -12,15 +12,14 @@ on:
       - 'notepad4/**'
       
 env:
-  WINDOWS_BASEKIT_URL: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/e83a8e64-04fc-45df-85c6-c2208d03bdb5/w_BaseKit_p_2024.2.0.635_offline.exe
-  WINDOWS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/0d500705-397e-41b3-8b2b-2a3da1753fc2/w_HPCKit_p_2024.2.0.633_offline.exe
-  WINDOWS_CPP_COMPONENTS: intel.oneapi.win.cpp-dpcpp-common
+  WINDOWS_BASEKIT_URL: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/d91caaa0-7306-46ea-a519-79a0423e1903/w_BaseKit_p_2024.2.1.101_offline.exe
+  WINDOWS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/745e923a-3f85-4e1e-b6dd-637c0e9ccba6/w_HPCKit_p_2024.2.1.80_offline.exe  WINDOWS_CPP_COMPONENTS: intel.oneapi.win.cpp-dpcpp-common
   WINDOWS_DPCPP_COMPONENTS: intel.oneapi.win.cpp-dpcpp-common
   CACHE_NUMBER: 6
   SAMPLES_TAG: 2024.2.0
   AI_SAMPLES_TAG: 2024.1.0
-  COMPILER_VERSION: 2024.2.0
-  TBB_VERSION: 2021.13.0
+  COMPILER_VERSION: 2024.2.1
+  TBB_VERSION: 2021.13.1
   VS_VER: vs2022
             
 jobs:
@@ -115,7 +114,7 @@ jobs:
           copy /y "%CD%\llvm\bin\lib*omp*.dll" bin\
 
       - name: upload executable artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
           path: bin
           name: notepad4-${{ matrix.toolset }}
@@ -178,7 +177,7 @@ jobs:
           env PATH=$PATH:/${{ matrix.mingw_arch }}/bin ldd bin/notepad4.exe | awk -v mingwarch="${{ matrix.mingw_arch }}" '{ arch = tolower(mingwarch); path = tolower($0);  if (path ~ "=> /" arch) print $(NF-1) }' | while read -r libpath; do cp -r $libpath bin/; done
           
       - name: upload executable artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
           path: bin
           name: notepad4-${{ matrix.mingw_prefix }}
