--- a/notepad4/CMakeLists.txt
+++ b/notepad4/CMakeLists.txt
@@ -8,15 +8,28 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 option(NOAVX2 "Target CPU does NOT support AVX2")
+option(AVX512 "Target CPU supports AVX512")
 
 if(NOT NOAVX2 AND NOT CMAKE_BUILD_TYPE MATCHES Debug)
     if(CMAKE_SYSTEM_PROCESSOR STREQUAL "AMD64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "amd64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
         if( ${CMAKE_CXX_COMPILER_ID} STREQUAL "IntelLLVM")
-            add_compile_options("/QxCORE-AVX2" "-O3" "-mavx2")
+	    if(AVX512)
+                add_compile_options("/QxCORE-AVX512" "-O3" "-mavx512")
+     	    else()
+                add_compile_options("/QxCORE-AVX2" "-O3" "-mavx2")
+	    endif()
         elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" OR "${CMAKE_CXX_SIMULATE_ID}" STREQUAL "MSVC")
-            add_compile_options("/Ot" "/fp:fast" "/Gv" "/O2" "/arch:AVX2")
+	    if(AVX512)
+                add_compile_options("/Ot" "/GL" "/Oi" "/Ob2" "/fp:fast" "/Gv" "/O2" "/arch:AVX512")
+     	    else()
+                add_compile_options("/Ot" "/GL" "/Oi" "/Ob2" "/fp:fast" "/Gv" "/O2" "/arch:AVX2")
+	    endif()
         else()
-            add_compile_options("-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe")
+	    if(AVX512)
+                add_compile_options("-mavx512" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe")
+     	    else()
+                add_compile_options("-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe")
+	    endif()
         endif()
     endif()
 endif()
